src/style.css
/* ... */
@keyframes wobbly {
	0% {
		transform: translateY(1.5px);
	}
	100% {
		transform: translateY(0);
	}
}

@keyframes glitch {
	0% {
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
	80% {
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
	82% {
		opacity: 0.8;
		transform: scale(1, 1.2) skew(80deg, 0);
	}
	84% {
		opacity: 0.8;
		transform: scale(1, 1.2) skew(-50deg, 0);
	}
	86% {
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
	100% {
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
}

/* New alternative glitch animation */
@keyframes glitch-alt {
	0% {
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
	75% { /* Start glitch effect slightly earlier */
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
	77% { /* Different skew/scale values */
		opacity: 0.7;
		transform: scale(1.1, 0.9) skew(0, -70deg);
	}
	79% {
		opacity: 0.7;
		transform: scale(0.9, 1.1) skew(0, 30deg);
	}
	81% {
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
	100% {
		opacity: 1;
		transform: scale(1, 1) skew(0, 0);
	}
}

@keyframes glitch2 {
	0% {
		transform: translateX(0);
	}
	30% {
		transform: translateX(0);
	}
	31% {
		transform: translateX(-5px);
	}
	32% {
		transform: translateX(0);
	}
	98% {
		transform: translateX(0);
	}
	100% {
		transform: translateX(-8px);
	}
}

.listings {
  font-size: 16px;
  padding: 2em;
  box-shadow: 5px 4px 9px 0px rgba(0,0,0,0.25);
  /* max-width: 600px; */
  margin: 0 auto 4em auto;

  background-color: var(--background-color);
  color: var(--text-color);

  font-family: 'Inter', sans-serif;
  font-weight: 300;
  line-height: 1.25;

  & > div {
    column-count: 2;
    column-gap: 2em;
    column-rule-width: 1px;
    column-rule-style: solid;
    column-rule-color: var(--text-color);  
  
    & > div { /* Listing item */
      /* outline: 1px #888 solid; */
      break-inside: avoid;
      margin-bottom: 2em;
    }
  
  }

  h2 {
    background-color: var(--text-color);
    margin-top: 0;
    overflow: hidden;
    width: 30%;
    aspect-ratio: 960/230;
    mask-image: url(/tv-listings-title.svg);
    color: transparent;
  }

  
  h3, h4, p {
    margin: 0;
  }

  button {
    appearance: none;
    border: none;
    font-family: inherit;
    display: block;
    width: 100%;
    text-align: left;
    background-color: var(--text-color);
    color: var(--background-color);
    font-size: 1.75em;
    line-height: 1.5;
    font-weight: 800;
    padding: 0 0.25em;
    margin-bottom: 0.35em;
    cursor: pointer;

    &.active {
      &:after {
        content: 'On now';
        font-size: 0.5em;
        font-weight: 400;
        margin-left: 1em;
      }
    }
  }

  h4 {
    font-weight: 900;
    font-size: 1.2em;
    line-height: 1em;
    margin-bottom: 0.2em;

    & i {
      font-style: normal;
      font-size: 0.75em;
      /* line-height: 0.5em; */
      position: relative;
      top: -0.1em;
    }

  }

  p {
    margin-bottom: 0.5em;
    font-size: 0.9em;
  }

  .movie {
    width: 2em;
    height: 2.5em;
    vertical-align: top;
    float: left;
    margin-right: 0.5em;
  }

  .movie-icon {
    background-color: var(--text-color);
    mask-image: url(/movie.svg);
  
    --movie-icon-size: 2.2em;
    width: var(--movie-icon-size);
    height: var(--movie-icon-size);
    vertical-align: top;
    float: left;
    margin-right: 0.5em;
    margin-top: 0.125em;
  }

  .credits {
    font-size: 0.7em;
    display: flex;
    gap: 3em;
    justify-content: space-between;
    margin-bottom: 0.25em;

    b {
      display: inline-block;
      font-weight: 600;
      text-align: right;
    }
  }

  .link {
    margin-top: 0.5em;
  }

  a {
    color: var(--link-color);
    text-decoration: none;

    &:hover {
      color: var(--link-hover-color);    
    }

    &:hover .new-tab {
      background-color: var(--link-hover-color);
      opacity: 1;
    }
  }



}

@media (prefers-color-scheme: light) {
  :root {
    --text-color: var(--light-text-color);
    --background-color: var(--light-background-color);
    --link-color: var(--light-link-color);
    --link-hover-color: var(--light-link-hover-color);
  
  }
  a:hover {
    color: var(--link-hover-color);
  }
  button {
    background-color: #f9f9f9;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-color: var(--dark-text-color);
    --background-color: var(--dark-background-color);
    --link-color: var(--dark-link-color);
    --link-hover-color: var(--dark-link-hover-color);
  }
}

@media screen and (max-width: 600px) {
  .content {
    --content-padding: 1em;
  }

  .listings {
    padding: 0.75em;

    h2 {
      width: 158px;
    }

    a {
      word-break: break-all;
    }

    & > div {
      column-count: 1;
    }
  }
}

